@@ -410,11 +410,11 @@ tmp(void)
 
         (void)sigfillset(&set);
         (void)sigprocmask(SIG_BLOCK, &set, &oset);
-#ifdef _AIX
+#if defined(_AIX) || defined(__solaris__)
         if ((fd = mkstemp(path)) != -1)
 #else
         if ((fd = mkostemp(path, O_CLOEXEC)) != -1)
-#endif /* ifdef _AIX */
+#endif /* if defined(_AIX) || defined(__solaris__) */
                 (void)unlink(path);
         (void)sigprocmask(SIG_SETMASK, &oset, NULL);
         return(fd);
