@@ -64,11 +64,13 @@ openbsd_open(const char *path, int flags, ...)
       return fd;
     }
 
+ #ifndef __solaris__
   if (flock(fd, lock & O_EXLOCK ? LOCK_EX : LOCK_SH) == -1)
     {
       close(fd);
       return -1;
     }
+#endif /* ifndef __solaris__ */
 
   return fd;
 }
